// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> render 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffbcbc",
        "borderColor": "red",
        "borderWidth": 1,
        "height": 100,
        "justifyContent": "center",
        "margin": 10,
        "width": 300,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Object {
        "color": "#333333",
        "margin": 20,
      }
    }
  >
    TouchableNativeFeedback is not supported on this platform!
  </Text>
</View>
`;

exports[`<DateTimePicker /> render 1`] = `null`;

exports[`<Dialog /> render 1`] = `<View />`;

exports[`<Header /> render 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "flexDirection": "row",
        "height": 80,
        "justifyContent": "center",
        "paddingHorizontal": 16,
      },
      Object {
        "paddingTop": 20,
      },
    ]
  }
>
  <View />
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#424242",
          "flex": 3,
          "fontSize": 16,
          "fontWeight": "bold",
          "textAlign": "center",
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`<HomeHeader /> render 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "padding": 16,
    }
  }
>
  <View />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        Object {
          "marginTop": 20,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#37474F",
          "flex": 1,
          "fontSize": 16,
          "marginTop": 16,
        }
      }
    >
      iCare Pontianak
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#525252",
            "fontSize": 20,
          },
          undefined,
          Object {
            "fontFamily": "Ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "flexDirection": "row",
        },
        Object {
          "backgroundColor": "#fff",
          "borderColor": "#ddd",
          "borderRadius": 5,
          "borderWidth": 1,
          "marginTop": 12,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      placeholder="Apa keluhan anda sekarang?"
      placeholderTextColor="#78909C"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "color": "#333",
            "flex": 1,
            "paddingHorizontal": 16,
            "paddingVertical": 4,
          },
        ]
      }
      underlineColorAndroid="transparent"
    />
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#333",
            "fontSize": 18,
          },
          Object {
            "marginHorizontal": 16,
          },
          Object {
            "fontFamily": "Ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`<Icon /> render 1`] = `
<Text
  allowFontScaling={false}
  style={
    Array [
      Object {
        "color": "#333",
        "fontSize": 24,
      },
      undefined,
      Object {
        "fontFamily": "Ionicons",
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      Object {},
    ]
  }
>
  
</Text>
`;

exports[`<PickerSelect /> render 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "borderColor": "#ddd",
        "borderRadius": 2,
        "borderWidth": 1,
        "paddingLeft": 8,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "height": 40,
        },
        undefined,
      ]
    }
  >
    <RCTPicker
      items={Array []}
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      selectedIndex={0}
      style={
        Array [
          Object {
            "height": 216,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`<SearchBar /> render 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    placeholder="Mau cari tindakan atau bantuan apa?"
    placeholderTextColor="#78909C"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "color": "#333",
          "flex": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 4,
        },
      ]
    }
    underlineColorAndroid="transparent"
  />
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "#333",
          "fontSize": 18,
        },
        Object {
          "marginHorizontal": 16,
        },
        Object {
          "fontFamily": "Ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`<StatusBar /> render 1`] = `<View />`;

exports[`<TextEdit /> render 1`] = `
<View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="sentences"
      keyboardType="default"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "borderBottomColor": "#ddd",
            "borderBottomWidth": 1,
            "color": "#333",
            "flex": 1,
            "fontSize": 14,
            "margin": 0,
            "padding": 0,
            "paddingVertical": 4,
          },
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
    />
  </View>
</View>
`;
